force-app/main/default/objects/leaseworks__Comps__c/leaseworks__Comps__c.object-meta.xml
<CustomObject>
    <label>New Issue Indication</label>
    <nameField>
        <label>Comps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Issue Indications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>