force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Benchmark__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Benchmark__c</fullName>
    <label>Benchmark</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TSY</fullName>
            </value>
            <value>
                <fullName>US Treasuries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>