force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Benchmark_Yield__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Benchmark_Yield__c</fullName>
    <label>Benchmark Yield</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>