force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Fitch_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fitch_Rating__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2206 Fitch Rating</label>
    <type>Text</type>
</CustomField>