force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Lesor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lessor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Issue Indications (Lessor)</relationshipLabel>
    <relationshipName>New_Issue_Indications1</relationshipName>
    <type>Lookup</type>
</CustomField>