force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Re_Offer_Yield__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Re_Offer_Yield__c</fullName>
    <label>Re-Offer Yield</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>