force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Spread_bps_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Spread_bps_F__c</fullName>
    <formula>Text( (leaseworks__Re_Offer_Yield__c*100 -  leaseworks__Benchmark_Yield__c*100 )*100 ) + &apos; Area&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spread (bps)</label>
    <type>Text</type>
</CustomField>