force-app/main/default/objects/leaseworks__Comps__c/fields/leaseworks__Tenor_Yr__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tenor_Yr__c</fullName>
    <label>Tenor (Yr)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>