force-app/main/default/objects/leaseworks__Comps__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Benchmark__c</columns>
    <columns>leaseworks__Tenor_Yr__c</columns>
    <columns>leaseworks__Pricing_Date__c</columns>
    <columns>leaseworks__Benchmark_Yield__c</columns>
    <columns>leaseworks__Re_Offer_Yield__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>